[tool.poetry]
name = "pydkit"
version = "0.0.1"
description = "Extended kit and tools for pydantic, to enjoy pydantic even more!"
authors = ["Mani Mozaffar <fmani.mozaffar@gmail.com>"]
repository = "https://github.com/manimozaffar/pydkit"
documentation = "https://manimozaffar.github.io/pydkit/"
readme = "README.md"
packages = [{ include = "pydkit" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.5.2"
aiofiles = "^23.2.1"
asyncer = "^0.0.2"
pytest-asyncio = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["pydkit"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pydkit"]
